k8s/admin-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  labels:
    app: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
      - name: admin-server
        image: visheshvishu/admin-server:latest 
        ports:
        - containerPort: 9091

---
apiVersion: v1
kind: Service
metadata:
  name: admin-server
spec:
  selector:
    app: admin-server
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
  type: ClusterIP
