k8s/config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: visheshvishu/config-server:latest
        ports:
        - containerPort: 8888
        
---

apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
