k8s/discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  labels:
    app: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
      - name: discovery-server
        image: visheshvishu/discovery-server:latest
        ports:
        - containerPort: 8761
        # env:
        # - name: CONFIG_SERVER_URL
        #   value: http://config-server:8888
        
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
spec:
  selector:
    app: discovery-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
      nodePort: 30002
  type: NodePort
