k8s/vets-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
  labels:
    app: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
      - name: vets-service
        image: visheshvishu/vets-service:latest
        ports:
        - containerPort: 8083
        # env:
        # - name: CONFIG_SERVER_URL
        #   value: http://config-server:8888
        # - name: SPRING_PROFILES_ACTIVE
        #   value: docker,mysql
---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
spec:
  selector:
    app: vets-service
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
  type: ClusterIP
