k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: discovery-server
                port:
                  number: 8761

          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-server
                port:
                  number: 9091

          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
